tests/expected_invalid_grant_direct_call.diag.out
<input>:8:5: error: function 'start_pass' grants a permit and must be used with 'grant'
        start_pass()
        ^^^^^^^^^^^^
